# santa_claus

./: .gitignore  CMakeLists.txt  Makefile  globalUnitTests.cpp  globalUnitTests.h  main.cpp
Object/: Box.cpp  Box.h  GiftPaper.cpp  GiftPaper.h  IConveyorBelt.h  IElf.h  ITable.h  LittlePony.cpp  LittlePony.h  Object.cpp  Object.h  PapaXmasConveyorBelt.cpp  PapaXmasConveyorBelt.h  PapaXmasElf.cpp  PapaXmasElf.h  PapaXmasTable.cpp  PapaXmasTable.h  Teddy.cpp  Teddy.h  Toy.cpp  Toy.h  Wrap.cpp  Wrap.h
Santa/: Santa.cpp  Xml.cpp  Xml.h  gift1.xml  gift2.xml
Xmas/: IConveyorBelt.h  IElf.h  ITable.h  PapaXmasConveyorBelt.cpp  PapaXmasConveyorBelt.h  PapaXmasElf.cpp  PapaXmasElf.h  PapaXmasTable.cpp  PapaXmasTable.h  RandomConeyoyBelt.cpp  RandomConeyoyBelt.h  RandomConveyorBelt.cpp  RandomConveyorBelt.h  TableRandom.cpp  TableRandom.h
Xml/: Xml.cpp  Xml.h
